# TINKER

./: .gitignore  CONTRIBUTING.md  README.md  ddg.html  ddg_lite.html  ddg_main.html  ddg_test2.html  ddg_test3.html  eslint.config.js  index.html  package-lock.json  package.json
scripts/: generate-icons.cjs
search/: plan.md
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  tts.rs
src/components/: Avatar.jsx  BrandBackground.jsx  ChatInterface.jsx  SettingsModal.jsx  SystemStatusCards.jsx  TasksProgress.jsx  UtilitiesModal.jsx  UtilitiesPanel.jsx  VoiceButton.jsx  VoiceOrb.jsx
src/lib/: agentLoop.js  ai.js  taskQueue.js  tts.js
winutil/.github/ISSUE_TEMPLATE/: bug_report.yaml
winutil/docs/content/dev/tweaks/Customize-Preferences/: MouseAcceleration.md
