[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
sysinfo = "0.36.1"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
msedge-tts = "0.2"
reqwest = { version = "0.13.3", features = ["blocking", "rustls", "json"] }
scraper = "0.27.0"
urlencoding = "2.1.3"
